<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03A9F4"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name" />

        <EditText
            android:id="@+id/enter_hobbies"
            style="@style/generalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="bake"
            android:ems="10"
            android:hint="@string/hobby_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#3F51B5"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/done_button"
            style="@style/generalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="handleDoneBtn"
            android:text="@string/done_text" />

        <TextView
            android:id="@+id/hobbies_output"
            style="@style/generalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/generalStyle"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/my_bio"
                tools:ignore="TextContrastCheck" />
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
